infra/k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fcm-api
  labels:
    app.kubernetes.io/name: fcm
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: fcm
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
